# videoDubber

./: .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml
scripts/: run_pipeline.py
src/video_dubber/: __init__.py  config.py  models.py  pipeline.py
src/video_dubber/media/: __init__.py  audio.py  video.py
src/video_dubber/services/: __init__.py  openai_client.py  transcription.py  translation.py  tts.py
src/video_dubber/utils/: __init__.py  concurrency.py  prompts.py  timecodes.py
tests/: __init__.py
